# robot_soccer

./: README.md
.marscode/: deviceInfo.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/communication_robosoccer/lib/communication_robosoccer/: communication  communication_test  single_vel_pub
install/communication_robosoccer/share/ament_index/resource_index/package_run_dependencies/: communication_robosoccer
install/communication_robosoccer/share/communication_robosoccer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/communication_robosoccer/share/communication_robosoccer/cmake/: communication_robosoccerConfig.cmake
install/gui_robosoccer/share/gui_robosoccer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gui_robosoccer/share/gui_robosoccer/launch/: launch.py
install/message_interface_robosoccer/include/message_interface_robosoccer/message_interface_robosoccer/msg/: array_threshold.h  array_threshold.hpp  decision_var.h  decision_var.hpp  image.hpp  point_calibration.h  point_calibration.hpp  pose.h  pose.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  velocity_robots.h
install/message_interface_robosoccer/include/message_interface_robosoccer/message_interface_robosoccer/msg/detail/: array_threshold__rosidl_typesupport_fastrtps_c.h  array_threshold__rosidl_typesupport_introspection_cpp.hpp  array_threshold__struct.hpp  array_threshold__type_support.c  array_threshold__type_support.h  decision_var__functions.c  decision_var__rosidl_typesupport_fastrtps_cpp.hpp  decision_var__struct.h  decision_var__traits.hpp  decision_var__type_support.h  image__builder.hpp  image__functions.c  image__functions.h  image__rosidl_typesupport_fastrtps_c.h  image__rosidl_typesupport_fastrtps_cpp.hpp  image__type_support.cpp  point__functions.c  point__struct.h  point__struct.hpp  point__traits.hpp  point__type_support.cpp  point__type_support.h  point_calibration__functions.c  point_calibration__functions.h  point_calibration__rosidl_typesupport_fastrtps_c.h  point_calibration__rosidl_typesupport_fastrtps_cpp.hpp  point_calibration__struct.h  point_calibration__traits.hpp  point_calibration__type_support.cpp  pose__builder.hpp  pose__functions.h  pose__rosidl_typesupport_introspection_c.h  pose__traits.hpp  pose__type_support.cpp  pose__type_support.h  pose_robots__functions.c  pose_robots__functions.h  pose_robots__rosidl_typesupport_fastrtps_c.h  pose_robots__struct.h  pose_robots__traits.hpp  (+14 more)
install/message_interface_robosoccer/share/ament_index/resource_index/rosidl_interfaces/: message_interface_robosoccer
install/message_interface_robosoccer/share/message_interface_robosoccer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/message_interface_robosoccer/share/message_interface_robosoccer/cmake/: ament_cmake_export_dependencies-extras.cmake  export_message_interface_robosoccer__rosidl_generator_cExport.cmake  export_message_interface_robosoccer__rosidl_generator_pyExport-noconfig.cmake  export_message_interface_robosoccer__rosidl_generator_pyExport.cmake  export_message_interface_robosoccer__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_message_interface_robosoccer__rosidl_typesupport_fastrtps_cExport.cmake  export_message_interface_robosoccer__rosidl_typesupport_fastrtps_cppExport.cmake  message_interface_robosoccerConfig.cmake  message_interface_robosoccer__rosidl_typesupport_cExport.cmake  message_interface_robosoccer__rosidl_typesupport_introspection_cExport-noconfig.cmake
install/message_interface_robosoccer/share/message_interface_robosoccer/msg/: ArrayThreshold.idl  ArrayThreshold.msg  DecisionVar.idl  DecisionVar.msg  Image.idl  Point.idl  Point.msg  PointCalibration.idl  Pose.idl  PoseRobots.idl  Velocity.msg
install/strategy_robosoccer/share/strategy_robosoccer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_robosoccer/lib/vision_robosoccer/: vision_control_test
install/vision_robosoccer/share/ament_index/resource_index/package_run_dependencies/: vision_robosoccer
install/vision_robosoccer/share/vision_robosoccer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_robosoccer/share/vision_robosoccer/cmake/: vision_robosoccerConfig.cmake
log/: latest_build
src/: README.txt
src/SAM_vision_test/src/: test.py
src/communication_robosoccer/: CMakeLists.txt
src/communication_robosoccer/src/: ReadMe.md  communication.cpp  communication_test.cpp  vel_pub_test.cpp
src/gui_robosoccer/: CMakeLists.txt
src/gui_robosoccer/include/: HSIslider.h  ImageLabelColor.h  ImageLabelControl.h  ImageLabelDrawI.h  ImageLabelEnlarge.h  globalFun.h  globalVar.h  mainwindow.h  rclcomm.h  rclcomm1.h  rclcomm2.h  rclcomm3.h  rclcomm4.h  rclcomm_log.h
src/gui_robosoccer/resource/: images.qrc
src/gui_robosoccer/src/: HSIslider.cpp  ImageLabelColor.cpp  ImageLabelControl.cpp  ImageLabelDrawI.cpp  ImageLabelEnlarge.cpp  ReadMe.md  globalFun.cpp  globalVar.cpp  mainwindow.cpp  rclcomm.cpp  rclcomm1.cpp  rclcomm2.cpp  rclcomm3.cpp  rclcomm4.cpp  rclcomm_log.cpp
src/gui_robosoccer/ui/: HSIslider.ui  mainwindow.ui
src/message_interface_robosoccer/: CMakeLists.txt
src/message_interface_robosoccer/msg/: Pose.msg  PoseRobots.msg  VelocityRobots.msg
src/strategy_robosoccer/: CMakeLists.txt
src/strategy_robosoccer/include/strategy_robosoccer/: Geometry.h  defines.h  strategy.h
src/strategy_robosoccer/src/: Geometry.cpp  ReadMe.txt  strategy.cpp
src/vision_robosoccer/: CMakeLists.txt
src/vision_robosoccer/include/vision_robosoccer/: vision_processing.h
src/vision_robosoccer/lib/: GxGVTL.cti  GxU3VTL.cti
src/vision_robosoccer/src/: ReadMe.txt  vision.cpp  vision_control_test.cpp  vision_display_test.cpp  vision_processing.cpp
(+9 files in other folders)
