cmake_minimum_required(VERSION 3.8)
project(communication_robosoccer)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -pthread -usb-1.0)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(message_interface_robosoccer REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

include_directories(
  include
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}
)
#--------------------------------------------------------------------------
add_executable(communication src/communication.cpp src/hid-libusb.c 
                             include/hidapi.h)

ament_target_dependencies(communication rclcpp message_interface_robosoccer)

target_link_libraries(communication usb-1.0)

install(TARGETS communication DESTINATION lib/${PROJECT_NAME})

#----------------------------------------------------------------------------
add_executable(single_vel_pub src/vel_pub_test.cpp)
ament_target_dependencies(single_vel_pub rclcpp message_interface_robosoccer)
install(TARGETS single_vel_pub DESTINATION lib/${PROJECT_NAME})


#test
add_executable(communication_test src/communication_test.cpp src/hid-libusb.c 
                             include/hidapi.h)

ament_target_dependencies(communication_test rclcpp message_interface_robosoccer)

target_link_libraries(communication_test usb-1.0)

install(TARGETS communication_test DESTINATION lib/${PROJECT_NAME})


